tests/coverage/misc/fail/early_errors/module_context/003_top_level_await_in_script.cjs
// Intended for script-mode parsing.
await 1;
